# animanode

./: cube.py  lint.bat  offscreen_video.py  pyproject.toml
animanode/: __init__.py  circle.py  cube.py  rectangle.py  renderer.py  rendering.py  scene.py  triangle.py
animanode/core/: __init__.py  canvas.py  node.py  renderer.py
animanode/export/: __init__.py  video.py
animanode/geometry/: __init__.py  base.py  box.py  circle.py  curve.py  cylinder.py  icosahedron.py  line.py  octahedron.py  parametric.py  plane.py  point.py  polygon.py  prism.py  pyramid.py  rectangle.py  ring.py  sphere.py  torus.py  triangle.py  tube.py
animanode/material/: __init__.py  basic.py
animanode/math/: __init__.py  matrix2d.py
animanode/mathutils/: __init__.py  matrix2d.py  vector2.py
animanode/transform/: __init__.py  transform.py
examples/: basic_shapes.py  offscreen_circle_video.py  offscreen_rectangle_video.py  offscreen_triangle_video.py  offscreen_video.py  video_example.py  video_generator.py
