[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "animanode"
version = "0.1.0"
description = "Animation and rendering toolkit"
authors = [{name = "David Timothy", email = "chendavidtimothy@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["animation", "graphics", "rendering", "wgpu", "3d", "visualization"]
dependencies = [
    "numpy",
    "imageio[ffmpeg]",
    "wgpu",
    "rendercanvas",
    "glfw",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.3.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/animanode/animanode"
"Repository" = "https://github.com/animanode/animanode"
"Issues" = "https://github.com/animanode/animanode/issues"

# ============================================================================
# RUFF CONFIGURATION
# ============================================================================

[tool.ruff]
line-length = 100
target-version = "py311"
include = ["*.py", "*.pyi"]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes errors
    "B",   # flake8-bugbear rules
    "I",   # isort rules (import sorting)
    "W",   # pycodestyle warnings
    "C4",  # flake8-comprehensions
    "N",   # pep8-naming
    "UP",  # pyupgrade (modernize syntax)
    "S",   # flake8-bandit (security)
    "PT",  # flake8-pytest-style
    "RUF", # Ruff-specific rules
]

ignore = [
    "E501",  # Line too long (handled by formatter)
    "C901",  # Complex structure
    "N803",  # Invalid argument name (scientific notation)
    "N806",  # Variable in function should be lowercase (scientific)
    "N815",  # Variable in class scope should not be mixedCase (scientific)
    "S311",  # Pseudo-random generators not suitable for cryptographic purposes
    "S101", # Use assert statements (allow in tests)
    "RUF003",
    "S603",
    "E741"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101", "S311"]
"*/test_*.py" = ["S101", "S311"]

[tool.ruff.lint.isort]
known-first-party = ["animanode"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]
split-on-trailing-comma = true
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================================
# MYPY CONFIGURATION
# ============================================================================

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
disallow_untyped_defs = false
check_untyped_defs = true
disallow_any_generics = false
disallow_subclassing_any = false
strict_optional = true
no_implicit_optional = true
ignore_missing_imports = true
follow_imports = "silent"
exclude = [".venv", "venv", "build", "dist", "__pycache__"]

[[tool.mypy.overrides]]
module = ["animanode.core", "animanode.utils"]
disallow_untyped_defs = true
disallow_incomplete_defs = true

# ============================================================================
# PYTEST CONFIGURATION
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=animanode",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# ============================================================================
# COVERAGE CONFIGURATION
# ============================================================================

[tool.coverage.run]
source = ["animanode"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
